--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "recraft": "NODE_ENV=development tsx tools/recraft.ts",
+    "optimize-image": "NODE_ENV=development tsx tools/image-optimizer.ts"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
