--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "tavily-search": "NODE_ENV=development tsx tools/tavily-search.ts"
   },
   "dependencies": {
+    "@tavily/core": "*",
+    "axios": "^1.6.7",
+    "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "replicate": "^0.25.1",
-    "axios": "^1.6.7",
     "turndown": "^7.1.2",
-    "yargs": "^17.7.2",
-    "@tavily/core": "*",
-    "chalk": "^4.1.2"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -42,6 +43,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/turndown": "^5.0.4",
+    "@types/yargs": "^17.0.32",
     "cypress": "^13.17.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
@@ -52,8 +56,6 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5",
-    "@types/turndown": "^5.0.4",
-    "@types/yargs": "^17.0.32"
+    "typescript": "^5"
   }
 }
